--- a/config/sys.config
+++ b/config/sys.config
@@ -3,9 +3,9 @@
 
  {gtp_u_kmod, [
 	       {sockets, [{grx, [{ip, {10,101,1,4}},
-                 {netdev, "ens4"},
+                 {netdev, "grx"},
 				 freebind,
-				 {netns, "/var/run/netns/grx"},
+				 %% {netns, "/var/run/netns/grx"},
 				 {routes, [{{10, 180, 0, 0}, 16}]}
 				]}
 			 ]}
